crates/bityzba/tests/ui/fail/direct_enum_construct.rs
use bityzba::invariant;

#[invariant(true)]
enum Choice {
    Named { name: String },
}

fn main() {
    let _ = Choice::Named {
        name: String::new(),
    };
}
